# Resident-Evil-Requiem-Multiplayer

./: .gitignore  CMakeLists.txt  README.md
docs/: LUA_CLEANUP_PLAN.md  REVERSE_ENGINEERING_MEMORY.md
reframework/autorun/: re9mp.lua
reframework/autorun/re9mp/: MODULES.md  init.lua  legacy_runtime.lua
reframework/autorun/re9mp/archive/: README.md  legacy_70_archived_prefab_and_spawn_probes.lua
reframework/autorun/re9mp/core/: README.md  legacy_00_state_and_snapshots.lua
reframework/autorun/re9mp/runtime/: README.md  legacy_80_commands_ui_callbacks.lua
reframework/autorun/re9mp/spawn/: README.md  legacy_30_context_and_controller_helpers.lua  legacy_40_load_phase_injection.lua  legacy_50_visual_foundation.lua  legacy_51_mesh_copy_and_registration.lua  legacy_52_lit_control_clone.lua
reframework/autorun/re9mp/tracing/: README.md  legacy_10_trace_hooks.lua  legacy_20_diagnostics_helpers.lua  legacy_21_character_and_visual_probes.lua  legacy_60_ownership_recipe.lua
scripts/: build_lua_bundle.ps1  deploy.ps1  install_tailscale.ps1  send_dev_command.ps1  setup_firewall.ps1  update_reframework.ps1
src/: re9mp_native.cpp
